ön yazı düzenlendi

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -139,11 +139,12 @@ const stack = [
           <!-- As a Mobile Application Developer; I create and maintain web and mobile applications that provide a seamless user experience and robust data handling capabilities. I have led the development of a full-stack mobile application from scratch, implemented a state management solution using Riverpod, and integrated multiple micro-services and third-party modules. 
  -->
           <p>I'm an <i>open-source enthusiast</i> with a focus on full-stack development and AI-driven solutions.</p>
-          <p>Currently, I'm a Full Stack Developer at HL Software, where I lead the development of innovative projects with expertise in .NET and C#.</p>
-          <b>I’m always open to new opportunities, offering expertise in both mobile and web development. Feel free to connect with me!</b>
-          <p>Throughout my career, I've contributed to projects like internal finance applications and open-source tools, actively sharing my journey through blog posts and social media.</p>
+          <p>Currently, I'm a Full Stack Developer and R&D Software Engineer at HL Software, where I lead the development of innovative projects, leveraging my expertise in .NET, C#, and AI technologies.</p>
+          <b>I’m always open to new opportunities, offering a strong background in both mobile and web development. Feel free to connect with me!</b>
+          <p>Throughout my career, I've contributed to projects like Kitapbulal.com, 3dyayinlari.com, and internal finance and logistics web applications, as well as pioneering AI-driven solutions such as automated issue title generation and sentiment analysis.</p>
           <p>Behind the Scenes</p>
-          <p>My work on AI-driven algorithms has been recognized in competitive arenas like Teknofest, where I helped secure a second-place finish.</p>
+          <p>My work on AI-driven algorithms has been recognized in competitive arenas, including securing a second-place finish at Teknofest through my contributions.</p>
+ 
         </article>
       </section>
 
