css de değişiklik yapılıd

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,7 +122,7 @@ const stack = [
             </h3>
             <p class="text-sm md:text-base lg:text-lg opacity-75 mt-3">
               As Sabahattin Ali says in his novel *Kuyucaklı Yusuf*: <br> &nbsp;
-              <em>“İki insanın birbiriyle karşılaşması kadere, tanıştıktan sonra yan yana kalmaları ise onların gayretine bağlıdır.”</em>
+              <em>"The meeting of two people is destiny, but staying together after getting to know each other depends on their efforts."</em>
             </p>            
           </div>          
         </div>
