Fix formatting in index.astro file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,10 +121,10 @@ const stack = [
               My Favorite Quote
             </h3>
             <p class="text-sm md:text-base lg:text-lg opacity-75 mt-3">
-              As Sabahattin Ali says in his novel *Kuyucaklı Yusuf*: <br> &nbsp;
+              As Sabahattin Ali says in his novel <em>Kuyucaklı Yusuf</em>: <br> &nbsp;
               <em>"The meeting of two people is destiny, but staying together after getting to know each other depends on their efforts."</em>
-            </p>            
-          </div>          
+            </p>
+          </div>
         </div>
       </div>
     </div>
