Refactored work experience and added new projects

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,7 +115,11 @@ const stack = [
             <a href='/blog' class='py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend'>
               Read my blog
             </a>
-          </div>
+            <a href='https://cal.com/fatihcloud' class='py-2 px-4 rounded truncate text-xs md:text-sm lg:text-base bg-black dark:bg-white text-white dark:text-black hover:opacity-75 blend'>
+              Schedule a Meeting
+            </a>
+          </div> 
+          <!-- my favorite quote 
           <div class="animated text-center mt-10">
             <h3 class="text-xl md:text-2xl lg:text-3xl font-bold text-black dark:text-white">
               My Favorite Quote
@@ -125,6 +129,7 @@ const stack = [
               <em>"The meeting of two people is destiny, but staying together after getting to know each other depends on their efforts."</em>
             </p>
           </div>
+          -->
         </div>
       </div>
     </div>
@@ -155,8 +160,9 @@ const stack = [
         <article>
           <p>I'm an <i>open-source enthusiast</i> with a focus on full-stack development and AI-driven solutions.</p>
           <p>Currently, I'm a Full Stack Developer and R&D Software Engineer at HL Software, where I lead the development of innovative projects, leveraging my expertise in .NET, C#, and AI technologies.</p>
+          <p>As a co-founder of both DevOpen and BudyCo, I have a strong background in backend and frontend development. My work spans across creating AI-powered tools, such as meme generation systems and sentiment analysis algorithms, as well as developing shared housing platforms for students that simplify their adaptation to new cities.</p>
           <b>I’m always open to new opportunities, offering a strong background in both mobile and web development. Feel free to connect with me!</b>
-          <p>Throughout my career, I've contributed to projects like Kitapbulal.com, 3dyayinlari.com, and internal finance and logistics web applications, as well as pioneering AI-driven solutions such as automated issue title generation and sentiment analysis.</p>
+          <p>Throughout my career, I've contributed to projects like Kitapbulal.com, 3dyayinlari.com, and internal finance and logistics web applications, alongside pioneering AI-driven solutions.</p>
           <p>Behind the Scenes</p>
           <p>My work on AI-driven algorithms has been recognized in competitive arenas, including securing a second-place finish at Teknofest through my contributions.</p>
         </article>
