--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -160,7 +160,7 @@ const stack = [
         <article>
           <p>I'm an <i>open-source enthusiast</i> with a focus on full-stack development and AI-driven solutions.</p>
           <p>Currently, I'm a Full Stack Developer and R&D Software Engineer at HL Software, where I lead the development of innovative projects, leveraging my expertise in .NET, C#, and AI technologies.</p>
-          <p>As a co-founder of both DevOpen and BudyCo, I have a strong background in backend and frontend development. My work spans across creating AI-powered tools, such as meme generation systems and sentiment analysis algorithms, as well as developing shared housing platforms for students that simplify their adaptation to new cities.</p>
+          <p>As a co-founder of both DevOpen and Buddy.co, I have a strong background in backend and frontend development. My work spans across creating AI-powered tools, such as meme generation systems and sentiment analysis algorithms, as well as developing shared housing platforms for students that simplify their adaptation to new cities.</p>
           <b>I’m always open to new opportunities, offering a strong background in both mobile and web development. Feel free to connect with me!</b>
           <p>Throughout my career, I've contributed to projects like Kitapbulal.com, 3dyayinlari.com, and internal finance and logistics web applications, alongside pioneering AI-driven solutions.</p>
           <p>Behind the Scenes</p>
